--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,4 +10,19 @@
 	--active: hsl(10, 10%, 40%);
 	--text: hsl(10, 10%, 90%);
 	--navbar-height: 4rem;
+
+	/*BUBBLE TEXTBOX DIMENSIONS*/
+    --width: 700px;
+    --height: max-content;
+    --border-radius: 15px;
+    --padding: 10px;
+
+    --red: #F94144;
+    --orange: #F3722C;
+    --yellow: #F8961E;
+    --light-yellow: #F9C74F;
+    --green: #90BE6D;
+    --blue: #43AA8B;
+    --light-blue: #93bffc;
+    --very-light-blue: #cbdffc;
 }
