--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,17 +12,17 @@
 	--navbar-height: 4rem;
 
 	/*BUBBLE TEXTBOX DIMENSIONS*/
-    --width: 700px;
-    --height: max-content;
-    --border-radius: 15px;
-    --padding: 10px;
+	--width: 700px;
+	--height: max-content;
+	--border-radius: 15px;
+	--padding: 10px;
 
-    --red: #F94144;
-    --orange: #F3722C;
-    --yellow: #F8961E;
-    --light-yellow: #F9C74F;
-    --green: #90BE6D;
-    --blue: #43AA8B;
-    --light-blue: #93bffc;
-    --very-light-blue: #cbdffc;
+	--red: #f94144;
+	--orange: #f3722c;
+	--yellow: #f8961e;
+	--light-yellow: #f9c74f;
+	--green: #90be6d;
+	--blue: #43aa8b;
+	--light-blue: #93bffc;
+	--very-light-blue: #cbdffc;
 }
