--- a/src/components/BubbleDetail.module.scss
+++ b/src/components/BubbleDetail.module.scss
@@ -1,21 +1,87 @@
-/*#region GENERAL*/
-html {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+$size: 300px;
+
+.x{
+  animation: x 13s linear infinite alternate;
+}
+
+.y{
+  animation: y 7s linear infinite alternate;
+}
+
+.blob{
+  animation: shift 8s linear infinite;
+  background-color: var(--yellow);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: $size;
+  height: $size;
+  transition: border-radius 1s linear 1s;
+}
+
+/*BLOB ANIMATION*/
+@keyframes shift {
+  from, to {
+    border-radius: 30% 70% 70% 30% / 30% 47% 53% 70%;
+    transform: translate(500px,100px) scale(1, 1);
+  }
+  25% {
+    border-radius: 45% 55% 57% 43% / 61% 39% 61% 39%;
+    transform: (-100px, -50px) scale(0.75, 1);
+  }
+  50% {
+    border-radius: 52% 48% 42% 58% / 64% 55% 45% 36%;
+    transform: translate(500px,100px) scale(0.7, 0.7);
+  }
+  75%{
+    border-radius: 50% 50% 23% 77% / 64% 52% 48% 36%;
+    transform: (-100px, -50px) rotate(-90deg) scale (0.85, 0.85);
+  }
+}
+
+/*TURN TO POST WHEN HOVER*/
+:is(.x, .y ):has(.blob:hover){
+    animation-play-state: paused;
+}
+
+/*#MOVE BLOB*/
+@keyframes x {
+  100% {
+    transform: translateX( calc(100vw - #{$size}) );
+  }
+}
+
+@keyframes y {
+  100% {
+    transform: translateY( calc(100vh - #{$size}) );
+  }
+}
+
+/*POST STYLE*/
+.blob:hover #postContainer {
+  scale: 1;
+}
+
+.blob:hover {
+  border-radius: 0;
+  animation-play-state: paused;
 }
 
 #postContainer {
+    transition: 400ms;
+    scale: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
     width: var(--width);
     height: var(--height);
     border-radius: var(--border-radius);
     background-color: var(--light-yellow);
 }
-/*#endregion*/
 
-/*#region TOP*/
 header {
     width: var(--width);
     height: calc(var(--height) * 0.15);
