--- a/src/components/BubbleDetail.module.scss
+++ b/src/components/BubbleDetail.module.scss
@@ -82,7 +82,7 @@ $size: 300px;
     background-color: var(--light-yellow);
 }
 
-header {
+header #userInfo {
     width: var(--width);
     height: calc(var(--height) * 0.15);
     border-top-right-radius: var(--border-radius);
