feat: add favicon and logo
Signed-off-by: Daniel Thorp <arcanistzed@gmail.com>

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -16,10 +16,8 @@
 }
 
 .logo {
-	color: #debd69;
-	font-size: 2rem;
-	font-weight: 900;
-	font-style: italic;
+	object-fit: cover;
+	width: fit-content;
 }
 
 .button {
